--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "start": "npx tsc & node ./build/server.js",
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
-    "test": "jasmine-ts",
-    "tsc": "tsc"
+    "xx": "ENV=test db-migrate --env test up && npx tsc & node node_modules/jasmine/bin/jasmine",
+    "test": "npx tsc & node node_modules/jasmine/bin/jasmine",
+    "migrate": "db-migrate --env test up && db-migrate up"
   },
   "author": "Udacity",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.19.0",
+    "cross-env": "^7.0.3",
     "db-migrate": "^0.11.13",
     "db-migrate-pg": "^1.2.2",
     "dotenv": "^16.0.3",
@@ -24,12 +26,12 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
-    "@types/jasmine": "^3.6.3",
+    "@types/jasmine": "^4.3.0",
     "@types/node": "^18.11.0",
     "@types/pg": "^7.14.7",
-    "jasmine": "^3.6.4",
-    "jasmine-spec-reporter": "^6.0.0",
-    "jasmine-ts": "^0.3.0",
+    "jasmine": "^4.4.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "jasmine-ts": "^0.3.3",
     "nodemon": "^2.0.20",
     "tsc-watch": "^4.2.9"
   }
