--- a/.env
+++ b/.env
@@ -3,5 +3,8 @@ DB_NAME=storefront
 TEST_DB_NAME=storefront_test
 DB_USER=postgres
 DB_PASSWORD=postgres
+JWT_SECRET= ajksgfjaslkgjlaijglajweogijoiejwo
 PORT=3000
 ENV=dev
+ADMIN_SECRET=SECRET_PASSWORD
+SALT_ROUND=10
