--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "server.ts",
   "scripts": {
     "start": "npx tsc & node ./build/server.js",
+    "test": "ENV=test db-migrate --env test up && npx tsc & node node_modules/jasmine/bin/jasmine & db-migrate --env test down ",
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
-    "xx": "ENV=test db-migrate --env test up && npx tsc & node node_modules/jasmine/bin/jasmine",
-    "test": "npx tsc & node node_modules/jasmine/bin/jasmine",
     "migrate": "db-migrate --env test up && db-migrate up"
   },
   "author": "Udacity",
@@ -16,17 +15,22 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.19.0",
     "cross-env": "^7.0.3",
+    "crypto": "^1.0.1",
     "db-migrate": "^0.11.13",
     "db-migrate-pg": "^1.2.2",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.9",
     "@types/jasmine": "^4.3.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.0",
     "@types/pg": "^7.14.7",
     "jasmine": "^4.4.0",
