--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "start": "npx tsc & node ./build/server.js",
-    "test": "ENV=test db-migrate --env test up && npx tsc & node node_modules/jasmine/bin/jasmine & db-migrate --env test down ",
+    "start": "SET ENV=dev& npx tsc & node ./build/server.js",
+    "test": "SET ENV=test& db-migrate --env test up && npx tsc & node node_modules/jasmine/bin/jasmine & db-migrate --env test down ",
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
-    "migrate": "db-migrate --env test up && db-migrate up"
+    "migrate": "db-migrate up"
   },
   "author": "Udacity",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
     "db-migrate": "^0.11.13",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.9",
     "@types/jasmine": "^4.3.0",
     "@types/jsonwebtoken": "^8.5.9",
