--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Udacity",
   "license": "ISC",
   "dependencies": {
+    "@types/supertest": "^2.0.12",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -24,6 +25,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
+    "supertest": "^6.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
